@@ -67,6 +67,8 @@ Extension Modules
 
 - Issue #2870: cmathmodule.c compile error.
 
+- Added a threading.Thread.getIdent() method.
+
 Library
 -------
 
